<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_recipe_24"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_weekly_menu"
            android:icon="@drawable/ic_calendar_24"
            android:title="@string/menu_weekly_menu" />
        <item
            android:id="@+id/nav_shopping_lists"
            android:icon="@drawable/ic_description"
            android:title="@string/menu_shopping_lists" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_accessibility"
            android:icon="@drawable/ic_menu_patients"
            android:title="@string/accessibility_section_title" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="Profil" />
    </group>
</menu>